GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/DogFormFields__mdt.object-meta.xml
<CustomObject>
    <label>DogFormField</label>
    <pluralLabel>DogFormFields</pluralLabel>
</CustomObject>