GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/BlockOrderSetting__c.field-meta.xml
<CustomField>
    <fullName>BlockOrderSetting__c</fullName>
    <label>BlockOrderSetting</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>