GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CheckboxGroupField__c.field-meta.xml
<CustomField>
    <fullName>CheckboxGroupField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxGroupField</label>
    <type>Checkbox</type>
</CustomField>