GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CheckboxGroupLabelOne__c.field-meta.xml
<CustomField>
    <fullName>CheckboxGroupLabelOne__c</fullName>
    <label>CheckboxGroupLabelOne</label>
    <length>30</length>
    <type>Text</type>
</CustomField>