GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CheckboxGroupOptions__c.field-meta.xml
<CustomField>
    <fullName>CheckboxGroupOptions__c</fullName>
    <label>CheckboxGroupOptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>