GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CheckboxGroupValueOne__c.field-meta.xml
<CustomField>
    <fullName>CheckboxGroupValueOne__c</fullName>
    <label>CheckboxGroupValueOne</label>
    <length>30</length>
    <type>Text</type>
</CustomField>