GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CheckboxGroupValueTwo__c.field-meta.xml
<CustomField>
    <fullName>CheckboxGroupValueTwo__c</fullName>
    <label>CheckboxGroupValueTwo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>