GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CorrectionField__c.field-meta.xml
<CustomField>
    <fullName>CorrectionField__c</fullName>
    <label>CorrectionField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>