GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CssClass__c.field-meta.xml
<CustomField>
    <fullName>CssClass__c</fullName>
    <label>CssClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>