GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/CssLabelClass_c__c.field-meta.xml
<CustomField>
    <fullName>CssLabelClass_c__c</fullName>
    <label>CssLabelClass__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>