GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/DropdownList__c.field-meta.xml
<CustomField>
    <fullName>DropdownList__c</fullName>
    <label>DropdownList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>