GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/FieldCheckboxValue__c.field-meta.xml
<CustomField>
    <fullName>FieldCheckboxValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FieldCheckboxValue</label>
    <type>Checkbox</type>
</CustomField>