GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/FieldLabelEn__c.field-meta.xml
<CustomField>
    <fullName>FieldLabelEn__c</fullName>
    <label>FieldLabelEn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>