GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/FieldNum__c.field-meta.xml
<CustomField>
    <fullName>FieldNum__c</fullName>
    <label>FieldNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>