GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/ToggleActive__c.field-meta.xml
<CustomField>
    <fullName>ToggleActive__c</fullName>
    <label>ToggleActive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>