GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/ToggleInactive__c.field-meta.xml
<CustomField>
    <fullName>ToggleInactive__c</fullName>
    <label>ToggleInactive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>