GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>time</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>checkbox-button</fullName>
            </value>
            <value>
                <fullName>toggle</fullName>
            </value>
            <value>
                <fullName>search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>