GearsetPOC/force-app/main/default/objects/DogFormFields__mdt/listViews/fields.listView-meta.xml
<ListView>
    <fullName>fields</fullName>
    <columns>DeveloperName</columns>
    <columns>Block__c</columns>
    <columns>FieldLabelEn__c</columns>
    <columns>FieldNum__c</columns>
    <columns>Type__c</columns>
    <columns>BlockOrderSetting__c</columns>
    <columns>FieldApiName__c</columns>
    <filterScope>Everything</filterScope>
    <label>fields</label>
    <language>en_US</language>
</ListView>